# ros_image_widgets

./: CMakeLists.txt  Readme.md  package.xml
config/: artificial-horizon.config.yaml  artificial_horizon.config.yaml  attitude_indicator.config.yaml  compass.config.yaml  compass_inline_template.config.yaml  params_example.config.yaml  text_overlay.config.yaml
images/: artificial-horizon.svg.j2  artificial_horizon.svg.j2  attitude_indicator.svg.j2  heart.svg.j2
include/image_widgets/: compass_widget_node.h
launch/: example.launch.py
scripts/: jinjaturtle.py
src/: compass_widget_node.cpp
